[refactor] Improve resource cleanup and code safety across crypto implementations
- Add try-finally blocks in cleanup actions (BotanCipherCleanupAction, BotanMacCleanupAction)
  to ensure destroy() is always called even if clear() fails with exception
- Replace integer arithmetic with overflow-safe methods (Math.multiplyExact/divideExact)
  in key size calculations across AEAD, MAC, and stream cipher implementations
- Standardize Javadoc tag ordering (@author before @see) for consistency
- Modernize code: use .toList() instead of .collect(Collectors.toList())
- Remove unused imports and improve code formatting

TODO: Investigate if botan_*_destroy internally calls clear to eliminate redundant operations

Signed-off-by: Yasser Aziza <yasser.aziza@gmail.com>